<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close"
        android:contentDescription="@string/content_description_close_button"/>

    <ProgressBar
        android:id="@+id/pb_pokemon_details"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/layout_pokemon_details"
       android:visibility="gone">

       <TextView
           android:id="@+id/tv_pokemon_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="32dp"
           android:text="@string/pokemon_name_placeholder"
           android:textSize="32sp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.498"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />



       <ImageView
           android:id="@+id/iv_pokemon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.498"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"
           app:srcCompat="@drawable/ic_1"
           android:contentDescription="@string/content_description_pokemon_image"/>

       <androidx.cardview.widget.CardView
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="16dp"
           app:cardCornerRadius="10dp"
           app:cardBackgroundColor="@color/colorWhite"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/iv_pokemon">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:id="@+id/tv_weight_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="24dp"
                   android:layout_marginTop="16dp"
                   android:text="@string/label_weight"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_height_label" />

               <TextView
                   android:id="@+id/tv_moves_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="24dp"
                   android:layout_marginTop="16dp"
                   android:text="@string/label_moves"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_type_value" />

               <TextView
                   android:id="@+id/tv_info"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="16dp"
                   android:layout_marginTop="24dp"
                   android:text="@string/label_info"
                   android:textSize="24sp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/tv_abilities_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="24dp"
                   android:layout_marginTop="16dp"
                   android:text="@string/label_abilities"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_move_value" />

               <TextView
                   android:id="@+id/tv_height_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="24dp"
                   android:layout_marginTop="24dp"
                   android:text="@string/label_height"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_info" />

               <TextView
                   android:id="@+id/tv_types_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="24dp"
                   android:layout_marginTop="16dp"
                   android:text="@string/label_types"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_weight_label" />

               <TextView
                   android:id="@+id/tv_height_value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="16dp"
                   android:text="@string/pokemon_height_placeholder"
                   app:layout_constraintStart_toEndOf="@+id/tv_height_label"
                   app:layout_constraintTop_toTopOf="@+id/tv_height_label" />

               <TextView
                   android:id="@+id/tv_weight_value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="16dp"
                   android:text="@string/pokemon_weight_placeholder"
                   app:layout_constraintStart_toEndOf="@+id/tv_weight_label"
                   app:layout_constraintTop_toTopOf="@+id/tv_weight_label" />

               <TextView
                   android:id="@+id/tv_type_value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="48dp"
                   android:layout_marginTop="8dp"
                   android:text="@string/pokemon_type_placeholder"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_types_label" />

               <TextView
                   android:id="@+id/tv_move_value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="48dp"
                   android:layout_marginTop="8dp"
                   android:text="@string/pokemon_move_placeholder"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_moves_label" />

               <TextView
                   android:id="@+id/tv_ability_value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="48dp"
                   android:layout_marginTop="8dp"
                   android:text="@string/pokemon_ability_placeholder"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tv_abilities_label" />
           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>
   </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>